# tacz

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
tacz/: constants.py  main.py
tacz/config/: __init__.py
tacz/data/: commands.json
tacz/llms/providers/: ollama_provider.py
tacz/utils/: command_db.py  db_populator.py  safety.py
tests/: README.md  conftest.py  test_command_db.py  test_config.py  test_setup.py
